ui: fix overly long powershell whitespace output from breaking the ui layout

--- a/src/app/packet-table/packet-table.component.css
+++ b/src/app/packet-table/packet-table.component.css
@@ -13,4 +13,6 @@ td.mat-cell {
 
 pre {
     margin-top: 0;
+    max-width: 50em;
 }
+
